@@ -1,3 +1,8 @@
+2004-03-03  Alexandre Oliva  <aoliva@redhat.com>
+
+	* elflink.c (bfd_elf_record_link_assignment): Mark undefweak and
+	undefined symbols as hash_new.
+
 2003-03-03  Andrew Stubbs  <andrew.stubbs@superh.com>
 
 	* archures.c: Add bfd_mach_sh4_nommu_nofpu.
